# ballista

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  build.sh
benchmarks/tpch/: Cargo.toml  README.md  docker-compose.yaml
rust/: Cargo.toml  test.dot
rust/ballista/: Cargo.toml  README.md  build.rs
rust/ballista-proto/src/physical_plan/: to_proto.rs
rust/ballista/benches/: hash_agg.rs
rust/ballista/examples/: client.rs  example_executor.conf  planner.rs
rust/ballista/proto/: ballista.proto
rust/ballista/src/: client.rs  columnar_batch.rs  context.rs  dataframe.rs  error.rs  etcd.rs  execution.rs  execution_plan.rs  executor.rs  flight_service.rs  k8s.rs  lib.rs  logicalplan.rs  memory_stream.rs  physical_plan.rs  plan.rs  planner.rs  prelude.rs  query_stage.rs  scheduler.rs  shuffle_hash_join.rs  shuffle_read.rs  shuffle_write.rs  test_utils.rs  utils.rs
rust/ballista/src/distributed/: client.rs  etcd.rs  executor.rs  flight_service.rs  scheduler.rs
rust/ballista/tests/: query_execution.rs
rust/benchmarks/: Cargo.toml  run-native.sh
rust/benchmarks/src/: main.rs
rust/benchmarks/tpch/: Cargo.toml  docker-compose.yaml  tpch-gen.sh
rust/client/: Cargo.toml
rust/core/: Cargo.toml
rust/core/proto/: ballista.proto
rust/core/src/: lib.rs  utils.rs
rust/cudf-rs/: Cargo.toml  README.md  build.rs
rust/cudf-rs/c/: library.cpp  library.hpp
rust/cudf-rs/examples/: aggregate.rs
rust/cudf-rs/src/: lib.rs
rust/cudf-rs/testdata/: example1.snappy.parquet
rust/examples/: do-get.rs  send-logical-plan.rs
rust/examples/apache-spark-rust-bindings/: Cargo.toml  main.rs
rust/examples/distributed-query/: README.md
rust/examples/parallel-aggregate/: Cargo.toml  Dockerfile  README.md  cluster-deployment.yaml  main.rs
rust/examples/tpch/: README.md
rust/executor/: Cargo.toml  build.rs  executor_config_spec.toml
rust/executor/src/: execution_loop.rs  flight_service.rs  main.rs
rust/lib/: Cargo.toml
rust/scheduler/: Cargo.toml  build.rs
rust/scheduler/src/: api.rs  lib.rs  main.rs  planner.rs
rust/src/: client.rs  context.rs  dataframe.rs  error.rs  lib.rs  logical_plan.rs  logicalplan.rs  plan.rs  serde.rs
rust/src/serde/: from_proto.rs  to_proto.rs
(+212 files in other folders)
