[workspace]

members = [
    "ballista",
    "examples/apache-spark-rust-bindings",
    "examples/distributed-query",
    "examples/tpch",
]

[patch.crates-io]
arrow = { version = "1.0.0", path = "../../arrow/rust/arrow" }
arrow-flight = { version = "1.0.0", path = "../../arrow/rust/arrow-flight" }
datafusion = { version = "1.0.0", path = "../../arrow/rust/datafusion" }
parquet = { version = "1.0.0", path = "../../arrow/rust/parquet" }
