[package]
name = "tpch"
version = "0.4.0-SNAPSHOT"
authors = ["Andy Grove <andygrove73@gmail.com>"]
edition = "2018"

[dependencies]
ballista = { path="../../ballista" }

arrow = { path = "../../../../arrow/rust/arrow" }
arrow-flight = { path = "../../../../arrow/rust/arrow-flight" }
datafusion = { path = "../../../../arrow/rust/datafusion" }
parquet = { path = "../../../../arrow/rust/parquet" }


env_logger = "0.8"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
structopt = "0.3"
